--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- <link rel="preload" crossorigin="anonymous" as="font" href="assets/templates/vmetre/fonts/MuseoSansBlack.woff" type="font/woff"> -->
     <!-- <link type="text/css" rel="stylesheet" href="assets/templates/vmetre/css/style.css" /> -->
     <!-- <link type="text/css" rel="stylesheet" href="assets/templates/vmetre/css/dop.css" /> -->
-    <link type="text/css" rel="stylesheet" href="assets/templates/new/dop.css" />
+    <!-- <link type="text/css" rel="stylesheet" href="assets/templates/new/dop.css" /> -->
     <!-- <link rel="stylesheet" href="assets/templates/new/styles.css"> -->
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css"/>
     <!-- <link type="text/css" rel="stylesheet" href="assets/templates/new/redesign.css"> -->
