--- a/product-page.html
+++ b/product-page.html
@@ -12,11 +12,10 @@
     content="Ламинат EGGER Classic Полярный дуб EPL093 31/7мм в интернет-магазине Вметре по цене 16.9 BYN ✈ Доставка по Минску и всей Беларуси ✅ Звоните ☎+375(29)131-09-90!">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
-  <link rel="preload" crossorigin="anonymous" as="font" href="assets/templates/vmetre/fonts/MuseoSansBlack.woff"
-    type="font/woff">
-  <link type="text/css" rel="stylesheet" href="assets/templates/vmetre/css/style.css" />
-  <link type="text/css" rel="stylesheet" href="assets/templates/vmetre/css/dop.css" />
-  <link rel="stylesheet" href="assets/templates/new/styles.css">
+  <!-- <link rel="preload" crossorigin="anonymous" as="font" href="assets/templates/vmetre/fonts/MuseoSansBlack.woff" type="font/woff"> -->
+  <!-- <link type="text/css" rel="stylesheet" href="assets/templates/vmetre/css/style.css" /> -->
+  <!-- <link type="text/css" rel="stylesheet" href="assets/templates/vmetre/css/dop.css" /> -->
+  <!-- <link rel="stylesheet" href="assets/templates/new/styles.css"> -->
 
   <script src="assets/templates/vmetre/js/jquery-3.5.1.min.js?ver=1649617537"></script>
   <script src="assets/templates/vmetre/js/jquery-migrate-3.3.0.min.js?ver=1649617537"></script>
@@ -62,7 +61,7 @@
 
   </script>
   <!-- <link type="text/css" rel="stylesheet" href="assets/templates/vmetre/css/standalone.css" /> -->
-  <link type="text/css" rel="stylesheet" href="assets/templates/new/redesign.css">
+  <link type="text/css" rel="stylesheet" href="assets/templates/new/minified_inner.css">
   <!-- <link rel="canonical"
     href="https://vmetre.by/napolnye-pokrytiya/laminat/laminat-egger-classic-polyarnyij-dub-epl093-31/7mm/"> -->
   <link rel="stylesheet" href="assets/components/msfavorites/css/default.min.css?v=f301bf14" type="text/css" />
