--- a/product-page.html
+++ b/product-page.html
@@ -15,7 +15,7 @@
   <!-- <link rel="preload" crossorigin="anonymous" as="font" href="assets/templates/vmetre/fonts/MuseoSansBlack.woff" type="font/woff"> -->
   <!-- <link type="text/css" rel="stylesheet" href="assets/templates/vmetre/css/style.css" /> -->
   <!-- <link type="text/css" rel="stylesheet" href="assets/templates/vmetre/css/dop.css" /> -->
-  <!-- <link rel="stylesheet" href="assets/templates/new/styles.css"> -->
+  <link type="text/css" rel="stylesheet" href="assets/templates/new/styles.css">
 
   <script src="assets/templates/vmetre/js/jquery-3.5.1.min.js?ver=1649617537"></script>
   <script src="assets/templates/vmetre/js/jquery-migrate-3.3.0.min.js?ver=1649617537"></script>
